--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">FlourichCreator</string>
-    <string name="facebook_app_id">Facebook App ID</string>
+    <string name="facebook_app_id">1364584603914038</string>
 </resources>
